--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -67,7 +67,7 @@ p {
   padding: 15px 30px;
 }
 
-.btn.branding.outline {
+.btn-branding-outline {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
   font-size: 18px;
@@ -77,13 +77,13 @@ p {
 }
 
 .project-description {
-  padding: 120 60px;
+  padding: 120px 60px;
 }
 
-@media (max-width: 960px) {
+@media (max-width: 900px) {
   h1 {
     font-size: 43px;
-    line-height: 1;
+    line-height: 1.5;
   }
 
   h2 {
