--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -58,6 +58,35 @@ p {
   font-size: 24px;
 }
 
+content-container {
+  padding: 160px 20px;
+}
+
+.content h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 20px 0 0;
+  font-family: var(--default-font-family);
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
+  margin: 30px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -83,7 +112,7 @@ p {
 @media (max-width: 900px) {
   h1 {
     font-size: 43px;
-    line-height: 1.5;
+    line-height: 56px;
   }
 
   h2 {
@@ -93,6 +122,12 @@ p {
   .hero {
     padding: 80px 20px;
   }
+
+  .content {
+    text-align: center;
+    padding: 0;
+  }
+
   .project-description {
     padding: 0;
     text-align: center;
