--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -32,7 +32,7 @@ h2 {
   font-size: 64px;
 }
 
-h4 {
+h3 {
   font-size: 48px;
 }
 
@@ -45,7 +45,7 @@ p {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 
 .hero p {
@@ -62,8 +62,8 @@ p {
   font-size: 24px;
 }
 
-content-container {
-  padding: 160px 20px;
+.content-container {
+  padding: 60px 20px;
 }
 
 .content h1 {
@@ -144,6 +144,9 @@ footer .contact-box {
   padding: 30px 120px;
   border-radius: 10px;
 }
+
+footer .contact-box p {
+}
 footer .email-link {
   text-decoration: none;
   color: black;
@@ -187,8 +190,8 @@ footer {
     font-size: 43px;
   }
 
-  .hero {
-    padding: 80px 20px;
+  h3 {
+    font-size: 18px;
   }
 
   .content {
