--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,8 +2,8 @@
 font-family: 'Poppins', sans-serif; */
 
 :root {
-  --branding-color: #6c63ff;
-  --secondary-color: #f9f7fe;
+  --branding-color: #4d8ab9;
+  --secondary-color: #f7fbfe;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
@@ -114,7 +114,7 @@ p {
 }
 
 .logo {
-  max-height: 40px;
+  max-width: 110px;
 }
 
 nav {
